--- a/index.html
+++ b/index.html
@@ -26,11 +26,36 @@
         </div>
     </div>
     <div class="linktree">
-        <a href="https://www.linkedin.com/in/girish-bharadwaj-6130a0201/" target="_blank"><div class="button">Linkedin</div></a>
-        <a href="https://github.com/Girish-Bharadwaj" target="_blank"><div class="button">Github</div></a>
-        <a href="https://www.codechef.com/users/girish_1_2_3" target="_blank"><div class="button">Codechef</div></a>
-        <a href="https://www.hackerrank.com/Girish_Kulkarni" target="_blank"><div class="button">Hacker Rank</div></a>
-        <a href="https://www.instagram.com/_girish_bharadwaj_/" target="_blank"><div class="button">Instagram</div></a>
+        <a href="https://www.linkedin.com/in/girish-bharadwaj-6130a0201/" target="_blank">
+            <div class="button">
+                <img src="./assets/linkedin.svg" >
+                Linkedin
+            </div>
+        </a>
+        <a href="https://github.com/Girish-Bharadwaj" target="_blank">
+            <div class="button">
+                <img src="./assets/github.png" >
+                Github
+            </div>
+        </a>
+        <a href="https://www.codechef.com/users/girish_1_2_3" target="_blank">
+            <div class="button">
+                <img src="./assets/codechef.svg" >
+                Codechef
+            </div>
+        </a>
+        <a href="https://www.hackerrank.com/Girish_Kulkarni" target="_blank">
+            <div class="button">
+                <img src="./assets/HackerRank_logo 2.svg" >
+                Hacker Rank
+            </div>
+        </a>
+        <a href="https://www.instagram.com/_girish_bharadwaj_/" target="_blank">
+            <div class="button">
+                <img src="./assets/instagram.png" >
+                Instagram
+            </div>
+        </a>
     </div>
 </body>
 </html>
