--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
     <div class="linktree">
         <a href="https://www.linkedin.com/in/girish-bharadwaj-6130a0201/" target="_blank">
             <div class="button">
-                <img src="./assets/linkedin.svg" >
+                <img class="icons" src="./assets/linkedin.svg" >
                 Linkedin
             </div>
         </a>
         <a href="https://github.com/Girish-Bharadwaj" target="_blank">
             <div class="button">
-                <img src="./assets/github.png" >
+                <img class="icons" src="./assets/github.png" >
                 Github
             </div>
         </a>
         <a href="https://www.codechef.com/users/girish_1_2_3" target="_blank">
             <div class="button">
-                <img src="./assets/codechef.svg" >
+                <img class="icons" src="./assets/codechef.svg" >
                 Codechef
             </div>
         </a>
         <a href="https://www.hackerrank.com/Girish_Kulkarni" target="_blank">
             <div class="button">
-                <img src="./assets/HackerRank_logo 2.svg" >
+                <img class="icons" src="./assets/HackerRank_logo 2.svg" >
                 Hacker Rank
             </div>
         </a>
         <a href="https://www.instagram.com/_girish_bharadwaj_/" target="_blank">
             <div class="button">
-                <img src="./assets/instagram.png" >
+                <img class="icons" src="./assets/instagram.png" >
                 Instagram
             </div>
         </a>
